--- a/Sports Statistics Application/css/style.css
+++ b/Sports Statistics Application/css/style.css
@@ -21,6 +21,9 @@ li {
     background-color: #171717;
 }
 
+.alert{
+    color: red;
+}
 
 .card-content {
     color: #fff;
@@ -28,6 +31,12 @@ li {
 
 .card {
     background-color: #171717;
+}
+
+.pagination-link.is-current{
+    background-color: rgb(105, 149, 230);
+    color: #fff;
+    border: rgb(105, 149, 230);;
 }
 
 /*misc styles*/
@@ -147,12 +156,21 @@ li {
 }
 
 /*standings form*/
+.columns.is-mobile .is-half{
+    text-align: center;
+}
+
+.columns.is-mobile{
+    padding: 0 20%;
+}
+
 .field {
     margin-bottom: 10px;
 }
 
 .container-button {
     margin: 0 2%;
+    text-align: center;
 }
 
 .button:hover {
@@ -162,12 +180,13 @@ li {
 }
 
 .label {
-    color: #fff;
+   color: #fff;
 }
 
 .field.is-grouped {
+    margin-top: 2%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 ::placeholder {
@@ -223,7 +242,7 @@ li {
 .pagination-list a,
 .mini-pagination a {
     background-color: white;
-    color: rgb(105, 149, 230);
+    color: #000;
 }
 
 .pagination-link {
@@ -317,6 +336,10 @@ li {
 }
 
 @media(max-width: 770px) {
+    .viewport-height{
+        height: auto;    
+    }
+
     .container-table {
         margin: 0 10px
     }
@@ -388,5 +411,7 @@ li {
     .pct {
         display: none;
     }
+    .remove{
+        display: none;
+    }
 }
-
